@@ -4,9 +4,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -15,55 +15,76 @@
  */
 package ghidra.app.plugin.core.debug.gui.time;
 
-import java.awt.BorderLayout;
-import java.awt.Component;
-import java.util.Collection;
-import java.util.Objects;
+import java.awt.*;
+import java.util.*;
+import java.util.List;
 import java.util.function.BiConsumer;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import javax.swing.*;
 import javax.swing.table.*;
 
 import docking.widgets.table.*;
 import docking.widgets.table.DefaultEnumeratedColumnTableModel.EnumeratedTableColumn;
+import generic.theme.GColor;
+import ghidra.debug.api.tracemgr.DebuggerCoordinates;
 import ghidra.docking.settings.Settings;
-import ghidra.framework.model.DomainObject;
+import ghidra.framework.model.DomainObjectEvent;
 import ghidra.framework.plugintool.PluginTool;
+import ghidra.program.model.address.Address;
 import ghidra.trace.model.Trace;
-import ghidra.trace.model.Trace.TraceSnapshotChangeType;
 import ghidra.trace.model.TraceDomainObjectListener;
+import ghidra.trace.model.target.TraceObjectValue;
+import ghidra.trace.model.target.path.KeyPath;
 import ghidra.trace.model.time.TraceSnapshot;
 import ghidra.trace.model.time.TraceTimeManager;
+import ghidra.trace.model.time.schedule.TraceSchedule;
+import ghidra.trace.model.time.schedule.TraceSchedule.TimeRadix;
+import ghidra.trace.util.TraceEvents;
+import ghidra.util.DateUtils;
 import ghidra.util.table.GhidraTableFilterPanel;
 import ghidra.util.table.column.AbstractGColumnRenderer;
 
 public class DebuggerSnapshotTablePanel extends JPanel {
+	private static final Color COLOR_FOREGROUND_STALE =
+		new GColor("color.debugger.plugin.resources.register.stale");
+	private static final Color COLOR_FOREGROUND_STALE_SEL =
+		new GColor("color.debugger.plugin.resources.register.stale.selected");
 
 	protected enum SnapshotTableColumns
 		implements EnumeratedTableColumn<SnapshotTableColumns, SnapshotRow> {
-		SNAP("Snap", Long.class, SnapshotRow::getSnap),
-		TIMESTAMP("Timestamp", String.class, SnapshotRow::getTimeStamp), // TODO: Use Date type here
-		EVENT_THREAD("Event Thread", String.class, SnapshotRow::getEventThreadName),
-		SCHEDULE("Schedule", String.class, SnapshotRow::getSchedule),
-		DESCRIPTION("Description", String.class, SnapshotRow::getDescription, SnapshotRow::setDescription);
+		SNAP("Snap", Long.class, SnapshotRow::getSnap, false),
+		TIME("Time", TraceSchedule.class, SnapshotRow::getTime, true),
+		EVENT_THREAD("Event Thread", String.class, SnapshotRow::getEventThreadName, true),
+		PC("PC", Address.class, SnapshotRow::getProgramCounter, true),
+		MODULE("Module", String.class, SnapshotRow::getModuleName, true),
+		FUNCTION("Function", ghidra.program.model.listing.Function.class, SnapshotRow::getFunction,
+				true),
+		TIMESTAMP("Timestamp", Date.class, SnapshotRow::getTimeStamp, false),
+		SCHEDULE("Schedule", TraceSchedule.class, SnapshotRow::getSchedule, false),
+		DESCRIPTION("Description", String.class, SnapshotRow::getDescription,
+				SnapshotRow::setDescription, true);
 
 		private final String header;
 		private final Function<SnapshotRow, ?> getter;
 		private final BiConsumer<SnapshotRow, Object> setter;
 		private final Class<?> cls;
+		private final boolean visible;
 
-		<T> SnapshotTableColumns(String header, Class<T> cls, Function<SnapshotRow, T> getter) {
-			this(header, cls, getter, null);
+		<T> SnapshotTableColumns(String header, Class<T> cls, Function<SnapshotRow, T> getter,
+				boolean visible) {
+			this(header, cls, getter, null, visible);
 		}
 
 		@SuppressWarnings("unchecked")
 		<T> SnapshotTableColumns(String header, Class<T> cls, Function<SnapshotRow, T> getter,
-				BiConsumer<SnapshotRow, T> setter) {
+				BiConsumer<SnapshotRow, T> setter, boolean visible) {
 			this.header = header;
 			this.cls = cls;
 			this.getter = getter;
 			this.setter = (BiConsumer<SnapshotRow, Object>) setter;
+			this.visible = visible;
 		}
 
 		@Override
@@ -87,18 +108,38 @@ public class DebuggerSnapshotTablePanel extends JPanel {
 		}
 
 		@Override
+		public boolean isVisible() {
+			return visible;
+		}
+
+		@Override
 		public void setValueOf(SnapshotRow row, Object value) {
 			setter.accept(row, value);
 		}
 	}
 
+	protected static class SnapshotTableModel
+			extends DefaultEnumeratedColumnTableModel<SnapshotTableColumns, SnapshotRow> {
+		public SnapshotTableModel(PluginTool tool) {
+			super(tool, "Snapshots", SnapshotTableColumns.class);
+		}
+
+		@Override
+		public List<SnapshotTableColumns> defaultSortOrder() {
+			return List.of(SnapshotTableColumns.TIME);
+		}
+	}
+
 	private class SnapshotListener extends TraceDomainObjectListener {
 		public SnapshotListener() {
-			listenForUntyped(DomainObject.DO_OBJECT_RESTORED, e -> objectRestored());
+			listenForUntyped(DomainObjectEvent.RESTORED, e -> objectRestored());
 
-			listenFor(TraceSnapshotChangeType.ADDED, this::snapAdded);
-			listenFor(TraceSnapshotChangeType.CHANGED, this::snapChanged);
-			listenFor(TraceSnapshotChangeType.DELETED, this::snapDeleted);
+			listenFor(TraceEvents.SNAPSHOT_ADDED, this::snapAdded);
+			listenFor(TraceEvents.SNAPSHOT_CHANGED, this::snapChanged);
+			listenFor(TraceEvents.SNAPSHOT_DELETED, this::snapDeleted);
+
+			listenFor(TraceEvents.VALUE_CREATED, this::valueCreated);
+			listenFor(TraceEvents.VALUE_DELETED, this::valueDeleted);
 		}
 
 		private void objectRestored() {
@@ -109,11 +150,8 @@ public class DebuggerSnapshotTablePanel extends JPanel {
 			if (snapshot.getKey() < 0 && hideScratch) {
 				return;
 			}
-			SnapshotRow row = new SnapshotRow(currentTrace, snapshot);
+			SnapshotRow row = new SnapshotRow(snapshot, tool);
 			snapshotTableModel.add(row);
-			if (currentSnap == snapshot.getKey()) {
-				snapshotFilterPanel.setSelectedItem(row);
-			}
 		}
 
 		private void snapChanged(TraceSnapshot snapshot) {
@@ -129,39 +167,133 @@ public class DebuggerSnapshotTablePanel extends JPanel {
 			}
 			snapshotTableModel.deleteWith(row -> row.getSnapshot() == snapshot);
 		}
+
+		private void valueCreated(TraceObjectValue value) {
+			if (value.getCanonicalPath().equals(KeyPath.of(TraceTimeManager.KEY_TIME_RADIX))) {
+				snapshotTableModel.fireTableDataChanged();
+			}
+		}
+
+		private void valueDeleted(TraceObjectValue value) {
+			if (value.getCanonicalPath().equals(KeyPath.of(TraceTimeManager.KEY_TIME_RADIX))) {
+				snapshotTableModel.fireTableDataChanged();
+			}
+		}
 	}
 
-	final TableCellRenderer boldCurrentRenderer = new AbstractGColumnRenderer<Object>() {
+	final TableCellRenderer styleCurrentRenderer = new AbstractGColumnRenderer<Object>() {
+		@Override
+		protected String formatNumber(Number value, Settings settings) {
+			return switch (value) {
+				case null -> "";
+				// SNAP is the only column with Long type
+				case Long snap -> getTimeRadix().format(snap);
+				default -> super.formatNumber(value, settings);
+			};
+		}
+
+		@Override
+		protected String getText(Object value) {
+			return switch (value) {
+				case null -> "";
+				case Date date -> DateUtils.formatDateTimestamp(date);
+				case TraceSchedule schedule -> schedule.toString(getTimeRadix());
+				default -> value.toString();
+			};
+		}
+
 		@Override
 		public String getFilterString(Object t, Settings settings) {
-			return t == null ? "<null>" : t.toString();
+			return switch (t) {
+				case null -> "";
+				// SNAP is the only column with Long type
+				case Long snap -> getTimeRadix().format(snap);
+				case Number n -> formatNumber(n, settings);
+				default -> getText(t);
+			};
+		}
+
+		Font lastFixedWidthFont;
+		Font fixedWidthBoldFont;
+		Font fixedWidthItalicFont;
+
+		Font computePlainFont(GTableCellRenderingData data) {
+			return data.getValue() instanceof Address ? getFixedWidthFont() : getDefaultFont();
+		}
+
+		void checkDeriveNewFonts() {
+			if (Objects.equals(lastFixedWidthFont, getFixedWidthFont())) {
+				return;
+			}
+			lastFixedWidthFont = getFixedWidthFont();
+			fixedWidthBoldFont = lastFixedWidthFont.deriveFont(Font.BOLD);
+			fixedWidthItalicFont = lastFixedWidthFont.deriveFont(Font.ITALIC);
+		}
+
+		Font computeBoldFont(GTableCellRenderingData data) {
+			if (data.getValue() instanceof Address) {
+				checkDeriveNewFonts();
+				return fixedWidthBoldFont;
+			}
+			return getBoldFont();
+		}
+
+		Font computeItalicFont(GTableCellRenderingData data) {
+			if (data.getValue() instanceof Address) {
+				checkDeriveNewFonts();
+				return fixedWidthItalicFont;
+			}
+			return getItalicFont();
 		}
 
 		@Override
 		public Component getTableCellRendererComponent(GTableCellRenderingData data) {
 			super.getTableCellRendererComponent(data);
 			SnapshotRow row = (SnapshotRow) data.getRowObject();
-			if (row != null && row.getSnap() == currentSnap) {
-				setBold();
+			if (row == null || current == DebuggerCoordinates.NOWHERE) {
+				// When used in a dialog, only currentTrace is set
+				return this;
 			}
+			if (current.getViewSnap() == row.getSnap()) {
+				setFont(computeBoldFont(data));
+			}
+			else if (current.getSnap() == row.getSnap()) {
+				setFont(computeItalicFont(data));
+			}
+			else {
+				setFont(computePlainFont(data));
+			}
+
+			TraceSnapshot snapshot = row.getSnapshot();
+			if (snapshot.isStale(true)) {
+				setForeground(
+					data.isSelected() ? COLOR_FOREGROUND_STALE_SEL : COLOR_FOREGROUND_STALE);
+			}
+			else {
+				JTable table = data.getTable();
+				setForeground(
+					data.isSelected() ? table.getSelectionForeground() : table.getForeground());
+			}
+
 			return this;
 		}
 	};
 
-	protected final EnumeratedColumnTableModel<SnapshotRow> snapshotTableModel;
+	protected final PluginTool tool;
+	protected final SnapshotTableModel snapshotTableModel;
 	protected final GTable snapshotTable;
 	protected final GhidraTableFilterPanel<SnapshotRow> snapshotFilterPanel;
-	protected boolean hideScratch = true;
+	protected boolean hideScratch = false;
 
 	private Trace currentTrace;
-	private Long currentSnap;
+	private volatile DebuggerCoordinates current = DebuggerCoordinates.NOWHERE;
 
 	protected final SnapshotListener listener = new SnapshotListener();
 
 	public DebuggerSnapshotTablePanel(PluginTool tool) {
 		super(new BorderLayout());
-		snapshotTableModel =
-			new DefaultEnumeratedColumnTableModel<>(tool, "Snapshots", SnapshotTableColumns.class);
+		this.tool = tool;
+		snapshotTableModel = new SnapshotTableModel(tool);
 		snapshotTable = new GTable(snapshotTableModel);
 		snapshotTable.setSelectionMode(ListSelectionModel.SINGLE_SELECTION);
 		add(new JScrollPane(snapshotTable));
@@ -171,20 +303,37 @@ public class DebuggerSnapshotTablePanel extends JPanel {
 
 		TableColumnModel columnModel = snapshotTable.getColumnModel();
 		TableColumn snapCol = columnModel.getColumn(SnapshotTableColumns.SNAP.ordinal());
-		snapCol.setPreferredWidth(40);
-		snapCol.setCellRenderer(boldCurrentRenderer);
-		TableColumn timeCol = columnModel.getColumn(SnapshotTableColumns.TIMESTAMP.ordinal());
-		timeCol.setPreferredWidth(200);
-		timeCol.setCellRenderer(boldCurrentRenderer);
+		snapCol.setPreferredWidth(20);
+		snapCol.setCellRenderer(styleCurrentRenderer);
+		TableColumn timeCol = columnModel.getColumn(SnapshotTableColumns.TIME.ordinal());
+		timeCol.setPreferredWidth(20);
+		timeCol.setCellRenderer(styleCurrentRenderer);
 		TableColumn etCol = columnModel.getColumn(SnapshotTableColumns.EVENT_THREAD.ordinal());
-		etCol.setPreferredWidth(40);
-		etCol.setCellRenderer(boldCurrentRenderer);
+		etCol.setPreferredWidth(20);
+		etCol.setCellRenderer(styleCurrentRenderer);
+		TableColumn pcCol = columnModel.getColumn(SnapshotTableColumns.PC.ordinal());
+		pcCol.setPreferredWidth(40);
+		pcCol.setCellRenderer(styleCurrentRenderer);
+		TableColumn moduleCol = columnModel.getColumn(SnapshotTableColumns.MODULE.ordinal());
+		moduleCol.setPreferredWidth(40);
+		moduleCol.setCellRenderer(styleCurrentRenderer);
+		TableColumn functionCol = columnModel.getColumn(SnapshotTableColumns.FUNCTION.ordinal());
+		functionCol.setPreferredWidth(40);
+		functionCol.setCellRenderer(styleCurrentRenderer);
+		TableColumn timeStampCol = columnModel.getColumn(SnapshotTableColumns.TIMESTAMP.ordinal());
+		timeStampCol.setPreferredWidth(200);
+		timeStampCol.setCellRenderer(styleCurrentRenderer);
 		TableColumn schdCol = columnModel.getColumn(SnapshotTableColumns.SCHEDULE.ordinal());
 		schdCol.setPreferredWidth(60);
-		schdCol.setCellRenderer(boldCurrentRenderer);
+		schdCol.setCellRenderer(styleCurrentRenderer);
 		TableColumn descCol = columnModel.getColumn(SnapshotTableColumns.DESCRIPTION.ordinal());
-		descCol.setPreferredWidth(200);
-		descCol.setCellRenderer(boldCurrentRenderer);
+		descCol.setPreferredWidth(20);
+		descCol.setCellRenderer(styleCurrentRenderer);
+	}
+
+	protected TimeRadix getTimeRadix() {
+		return currentTrace == null ? TimeRadix.DEFAULT
+				: currentTrace.getTimeManager().getTimeRadix();
 	}
 
 	private void addNewListeners() {
@@ -234,11 +383,18 @@ public class DebuggerSnapshotTablePanel extends JPanel {
 			return;
 		}
 		TraceTimeManager manager = currentTrace.getTimeManager();
-		Collection<? extends TraceSnapshot> snapshots = hideScratch
+
+		List<SnapshotRow> toAdd = new ArrayList<>();
+		for (TraceSnapshot snapshot : hideScratch
 				? manager.getSnapshots(0, true, Long.MAX_VALUE, true)
-				: manager.getAllSnapshots();
-		snapshotTableModel
-				.addAll(snapshots.stream().map(s -> new SnapshotRow(currentTrace, s)).toList());
+				: manager.getAllSnapshots()) {
+			SnapshotRow row = new SnapshotRow(snapshot, tool);
+			toAdd.add(row);
+			if (current != DebuggerCoordinates.NOWHERE &&
+				snapshot.getKey() == current.getViewSnap()) {
+			}
+		}
+		snapshotTableModel.addAll(toAdd);
 	}
 
 	protected void deleteScratchSnapshots() {
@@ -250,10 +406,11 @@ public class DebuggerSnapshotTablePanel extends JPanel {
 			return;
 		}
 		TraceTimeManager manager = currentTrace.getTimeManager();
-		snapshotTableModel.addAll(manager.getSnapshots(Long.MIN_VALUE, true, 0, false)
-				.stream()
-				.map(s -> new SnapshotRow(currentTrace, s))
-				.toList());
+		Collection<? extends TraceSnapshot> sratch =
+			manager.getSnapshots(Long.MIN_VALUE, true, 0, false);
+		snapshotTableModel.addAll(sratch.stream()
+				.map(s -> new SnapshotRow(s, tool))
+				.collect(Collectors.toList()));
 	}
 
 	public ListSelectionModel getSelectionModel() {
@@ -265,8 +422,15 @@ public class DebuggerSnapshotTablePanel extends JPanel {
 		return row == null ? null : row.getSnap();
 	}
 
+	public void setCurrent(DebuggerCoordinates coords) {
+		boolean fire = coords.getViewSnap() != current.getViewSnap();
+		current = coords;
+		if (fire) {
+			snapshotTableModel.fireTableDataChanged();
+		}
+	}
+
 	public void setSelectedSnapshot(Long snap) {
-		currentSnap = snap;
 		if (snap == null) {
 			snapshotTable.clearSelection();
 			return;
@@ -283,6 +447,5 @@ public class DebuggerSnapshotTablePanel extends JPanel {
 			return;
 		}
 		snapshotFilterPanel.setSelectedItem(row);
-		snapshotTableModel.fireTableDataChanged();
 	}
 }
