@@ -4,9 +4,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -15,18 +15,38 @@
  */
 package ghidra.app.util.bin.format.golang.rtti.types;
 
+import static ghidra.app.util.bin.format.golang.GoConstants.*;
+
 import java.io.IOException;
 import java.util.*;
-import java.util.stream.Collectors;
 
-import ghidra.app.util.bin.format.golang.GoFunctionMultiReturn;
 import ghidra.app.util.bin.format.golang.rtti.GoSlice;
+import ghidra.app.util.bin.format.golang.rtti.GoTypeManager;
 import ghidra.app.util.bin.format.golang.structmapping.*;
 import ghidra.program.model.address.Address;
 import ghidra.program.model.data.*;
+import ghidra.util.exception.CancelledException;
+import ghidra.util.exception.InvalidInputException;
 
-@StructureMapping(structureName = "runtime.functype")
+/**
+ * A {@link GoType} structure that defines a function type.
+ */
+@StructureMapping(structureName = {"runtime.functype", "internal/abi.FuncType"})
 public class GoFuncType extends GoType {
+
+	/**
+	 * Converts a ptr-to-ptr-to-funcdef to the base funcdef type.
+	 * 
+	 * @param dt ghidra {@link DataType}
+	 * @return {@link FunctionDefinition} that was pointed to by specified data type, or null
+	 */
+	public static FunctionDefinition unwrapFunctionDefinitionPtrs(DataType dt) {
+		return dt != null && dt instanceof Pointer ptrDT &&
+			ptrDT.getDataType() instanceof Structure closureStructDT &&
+			closureStructDT.getNumComponents() > 1 &&
+			closureStructDT.getComponent(0).getDataType() instanceof Pointer funcdefPtr &&
+			funcdefPtr.getDataType() instanceof FunctionDefinition funcdef ? funcdef : null;
+	}
 
 	@FieldMapping
 	private int inCount; // uint16
@@ -35,30 +55,43 @@ public class GoFuncType extends GoType {
 	private int outCount; // uint16
 
 	public GoFuncType() {
+		// empty
 	}
 
+	/**
+	 * {@return true if this function type is defined to be vararg}
+	 */
 	public boolean isVarArg() {
 		return (outCount & 0x8000) != 0;
 	}
 
+	/**
+	 * {@return the number of inbound parameters}
+	 */
 	public int getInCount() {
 		return inCount;
 	}
 
+	/**
+	 * {@return the number of outbound result values}
+	 */
 	public int getOutCount() {
 		return outCount & 0x7fff;
 	}
 
+	/**
+	 * {@return the total number of in and out parameters}
+	 */
 	public int getParamCount() {
 		return inCount + (outCount & 0x7fff);
 	}
 
-	public List<Address> getParamTypeAddrs() throws IOException {
+	private List<Address> getParamTypeAddrs() throws IOException {
 		GoSlice slice = getParamListSlice();
 		long[] typeOffsets = slice.readUIntList(programContext.getPtrSize());
 		return Arrays.stream(typeOffsets)
 				.mapToObj(programContext::getDataAddress)
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	private GoSlice getParamListSlice() {
@@ -66,102 +99,168 @@ public class GoFuncType extends GoType {
 		return new GoSlice(getOffsetEndOfFullType(), count, count, programContext);
 	}
 
+	/**
+	 * {@return a list of {@link GoType}s for each parameter}
+	 * @throws IOException if error read type info
+	 */
 	@Markup
 	public List<GoType> getParamTypes() throws IOException {
 		return getParamTypeAddrs().stream()
-				.map(addr -> {
-					try {
-						return programContext.getGoType(addr);
-					}
-					catch (IOException e) {
-						return null;
-					}
-				})
-				.collect(Collectors.toList());
+				.map(addr -> programContext.getGoTypes().getTypeUnchecked(addr))
+				.toList();
 	}
 
 	@Override
-	public void additionalMarkup(MarkupSession session) throws IOException {
+	public void additionalMarkup(MarkupSession session) throws IOException, CancelledException {
+		super.additionalMarkup(session);
 		GoSlice slice = getParamListSlice();
-		slice.markupArray(getStructureLabel() + "_paramlist", GoBaseType.class, true, session);
+		slice.markupArray(getStructureLabel() + "_paramlist", getStructureNamespace(),
+			GoBaseType.class, true, session);
 	}
 
-	public String getFuncPrototypeString(String funcName) throws IOException {
-		StringBuilder sb = new StringBuilder();
-		sb.append("func");
+	/**
+	 * Returns a string that describes the function type as a Go-ish function decl.
+	 * 
+	 * @param funcName optional name of a function
+	 * @return Go func decl string
+	 */
+	public String getFuncPrototypeString(String funcName) {
 		if (funcName != null && !funcName.isBlank()) {
-			sb.append(" ").append(funcName);
+			funcName = " " + funcName;
+		} else {
+			funcName = "";
 		}
-		sb.append("(");
+		return "func%s%s".formatted(funcName, getParamListString());
+	}
+	
+	public String getParamListString() {
+		try {
+			StringBuilder sb = new StringBuilder();
+			sb.append("(");
 
-		List<GoType> paramTypes = getParamTypes();
-		List<GoType> inParamTypes = paramTypes.subList(0, inCount);
-		List<GoType> outParamTypes = paramTypes.subList(inCount, paramTypes.size());
-		for (int i = 0; i < inParamTypes.size(); i++) {
-			GoType paramType = inParamTypes.get(i);
-			if (i != 0) {
-				sb.append(", ");
-			}
-			sb.append(paramType.getNameString());
-		}
-		sb.append(")");
-		if (!outParamTypes.isEmpty()) {
-			sb.append(" (");
-			for (int i = 0; i < outParamTypes.size(); i++) {
-				GoType paramType = outParamTypes.get(i);
+			List<GoType> paramTypes = getParamTypes();
+			List<GoType> inParamTypes = paramTypes.subList(0, inCount);
+			List<GoType> outParamTypes = paramTypes.subList(inCount, paramTypes.size());
+			for (int i = 0; i < inParamTypes.size(); i++) {
+				GoType paramType = inParamTypes.get(i);
 				if (i != 0) {
 					sb.append(", ");
 				}
-				sb.append(paramType.getNameString());
+				sb.append(paramType.getName());
 			}
 			sb.append(")");
+			if (!outParamTypes.isEmpty()) {
+				sb.append(" ");
+				if (outParamTypes.size() > 1) {
+					sb.append("(");
+				}
+				for (int i = 0; i < outParamTypes.size(); i++) {
+					GoType paramType = outParamTypes.get(i);
+					if (i != 0) {
+						sb.append(", ");
+					}
+					sb.append(paramType.getName());
+				}
+				if (outParamTypes.size() > 1) {
+					sb.append(")");
+				}
+			}
+			return sb.toString();
+		} catch (IOException e) {
+			return "(???)";
 		}
-		return sb.toString();
+	}
+	
+	public static String getMissingFuncPrototypeString(String funcName, String genericsString) {
+		genericsString = genericsString == null || genericsString.isEmpty() ? "" : "[" + genericsString + "]";
+		return "func %s%s(???)".formatted(funcName, genericsString);
 	}
 
 	@Override
 	public DataType recoverDataType() throws IOException {
-		String name = typ.getNameString();
-		DataTypeManager dtm = programContext.getDTM();
+		GoTypeManager goTypes = programContext.getGoTypes();
+		DataTypeManager dtm = goTypes.getDTM();
+		String name = goTypes.getTypeName(this);
+		CategoryPath cp = goTypes.getCP(this);
+
+		StructureDataType struct = new StructureDataType(cp, name, (int) typ.getSize(), dtm);
+		DataType structPtr = dtm.getPointer(struct);
+
+		FunctionDefinitionDataType funcDef = new FunctionDefinitionDataType(cp, name + "_F", dtm);
+		struct.replace(0, dtm.getPointer(funcDef), -1, "F", null);
+		struct.add(new ArrayDataType(goTypes.getDataType("uint8"), 0), "context", null);
+		struct.setToDefaultPacking();
+
+		// pre-push an partially constructed struct into the cache to prevent endless recursive loops
+		goTypes.cacheRecoveredDataType(this, structPtr);
 
 		List<GoType> paramTypes = getParamTypes();
 		List<GoType> inParamTypes = paramTypes.subList(0, inCount);
 		List<GoType> outParamTypes = paramTypes.subList(inCount, paramTypes.size());
 
 		List<ParameterDefinition> params = new ArrayList<>();
-		for (int i = 0; i < inParamTypes.size(); i++) {
-			GoType paramType = inParamTypes.get(i);
-			DataType paramDT = paramType.recoverDataType();
+		params.add(
+			new ParameterDefinitionImpl(GOLANG_CLOSURE_CONTEXT_NAME, dtm.getPointer(struct), null));
+
+		for (GoType paramType : inParamTypes) {
+			DataType paramDT = goTypes.getDataType(paramType);
 			params.add(new ParameterDefinitionImpl(null, paramDT, null));
 		}
+
 		DataType returnDT;
 		if (outParamTypes.size() == 0) {
 			returnDT = VoidDataType.dataType;
 		}
 		else if (outParamTypes.size() == 1) {
-			returnDT = outParamTypes.get(0).recoverDataType();
+			returnDT = goTypes.getDataType(outParamTypes.get(0));
 		}
 		else {
-			List<DataType> paramDataTypes = recoverTypes(outParamTypes);
-			GoFunctionMultiReturn multiReturn = new GoFunctionMultiReturn(
-				programContext.getRecoveredTypesCp(), name, paramDataTypes, dtm, null);
-			returnDT = multiReturn.getStruct();
+			List<DataType> paramDataTypes = new ArrayList<>();
+			for (GoType outParamType : outParamTypes) {
+				paramDataTypes.add(goTypes.getDataType(outParamType));
+			}
+			returnDT = goTypes.getFuncMultiReturn(paramDataTypes);
 		}
 
-		FunctionDefinitionDataType funcDef = new FunctionDefinitionDataType(
-			programContext.getRecoveredTypesCp(), name, dtm);
 		funcDef.setArguments(params.toArray(ParameterDefinition[]::new));
 		funcDef.setReturnType(returnDT);
 
-		return dtm.getPointer(funcDef);
+
+		// TODO: typ.getSize() should be ptrsize, and struct size should also be ptrsize
+
+		return structPtr;
 	}
 
-	private List<DataType> recoverTypes(List<GoType> types) throws IOException {
-		List<DataType> result = new ArrayList<>();
-		for (GoType type : types) {
-			result.add(type.recoverDataType());
+	public FunctionDefinition getFunctionSignature(GoTypeManager goTypes) throws IOException {
+		DataType dt = goTypes.getDataType(this);
+		FunctionDefinition funcdef = dt instanceof Pointer ptrDT &&
+			ptrDT.getDataType() instanceof Structure closureStructDT &&
+			closureStructDT.getNumComponents() > 1 &&
+			closureStructDT.getComponent(0).getDataType() instanceof Pointer funcdefPtr &&
+			funcdefPtr.getDataType() instanceof FunctionDefinition fd ? fd : null;
+
+		if (funcdef == null) {
+			throw new IOException("Unable to extract function sig for " + this.toString());
 		}
-		return result;
+
+		List<ParameterDefinition> newArgs = new ArrayList<>();
+		ParameterDefinition[] oldArgs = funcdef.getArguments();
+		for (int i = 1; i < oldArgs.length; i++) {
+			newArgs.add(oldArgs[i]);
+		}
+
+		FunctionDefinitionDataType funcsig =
+			new FunctionDefinitionDataType(funcdef.getName(), goTypes.getDTM());
+		try {
+			funcsig.setCallingConvention(funcdef.getCallingConventionName());
+		}
+		catch (InvalidInputException e) {
+			// ignore
+		}
+		funcsig.setReturnType(funcdef.getReturnType());
+		funcsig.setArguments(newArgs.toArray(ParameterDefinition[]::new));
+
+		return funcsig;
 	}
 
 	@Override
@@ -178,13 +277,17 @@ public class GoFuncType extends GoType {
 	}
 
 	@Override
-	public String toString() {
-		try {
-			return getFuncPrototypeString(null);
-		}
-		catch (IOException e) {
-			return super.toString();
-		}
+	protected String getTypeDeclString() throws IOException {
+		String baseTypeName = getSymbolName().getBaseTypeName();
+		String declStr = getFuncPrototypeString(null);
+		return baseTypeName.startsWith("func(") ? "type %s".formatted(declStr)
+				: "type %s %s".formatted(baseTypeName, declStr);
+	}
+
+	@Override
+	public boolean isValid() {
+		return super.isValid() && typ.getSize() == programContext.getPtrSize();
 	}
 
 }
+
